Added some meta tags

--- a/client/main.html
+++ b/client/main.html
@@ -1,5 +1,7 @@
 <head>
+  <meta charset="utf-8">
   <title>MyExpense</title>
+  <meta name="description" content="An app to track my expenses">
 </head>
 
 <body>
